// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout listview header empty 1`] = `undefined`;

exports[`layout listview header nav 1`] = `
<div class="listview__header">
  <!---->
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb listview__breadcrumb"><span class="el-breadcrumb__item"><span role="link" class="el-breadcrumb__inner">
      home
    </span><span role="presentation" class="el-breadcrumb__separator">/</span></span><span class="el-breadcrumb__item" aria-current="page"><span role="link" class="el-breadcrumb__inner is-link">
      list
    </span><span role="presentation" class="el-breadcrumb__separator">/</span></span></div>
</div>
`;

exports[`layout listview header title & nav 1`] = `
<div class="listview__header">
  <h1 class="listview__title">headerTitle</h1>
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb listview__breadcrumb"><span class="el-breadcrumb__item"><span role="link" class="el-breadcrumb__inner is-link">
      home
    </span><span role="presentation" class="el-breadcrumb__separator">/</span></span><span class="el-breadcrumb__item" aria-current="page"><span role="link" class="el-breadcrumb__inner is-link">
      list
    </span><span role="presentation" class="el-breadcrumb__separator">/</span></span></div>
</div>
`;

exports[`layout listview header title 1`] = `
<div class="listview__header">
  <h1 class="listview__title">headerTitle</h1>
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb listview__breadcrumb"></div>
</div>
`;
